Fix component overflow

--- a/src/components/features/sideBar/_sideBar.css
+++ b/src/components/features/sideBar/_sideBar.css
@@ -1,6 +1,4 @@
-/* Ensuring the sidebar container appearance */
 .sidebar {
-    
     padding: 20px;
     overflow-y: auto;
     min-width: 450px;
@@ -41,8 +39,8 @@
   
   @media (min-width: 993px) {
     .sidebar-item-icon {
-      width: 40px;
-      height: 40px;
+      width: 60px;
+      height: 60px;
     }
   }
 
